# rust-nation

./: Cargo.toml  README.md  flake.nix
assets/: setup.excalidraw
hackathon-car/: Cargo.toml
hackathon-car/src/: lib.rs
hackathon-car/src/raw/: dc.rs  errors.rs
hackathon-drone/: Cargo.toml
hackathon-macros/: Cargo.toml
hackathon-macros/src/: lib.rs
hackathon-vision/: Cargo.toml
hackathon-vision/src/: lib.rs
hackathon-vision/src/raw/: colors.rs  distance.rs  led_detector.rs
hs-hackathon-car/: Cargo.toml
hs-hackathon-car/src/: lib.rs
hs-hackathon-car/src/raw/: mod.rs  servo.rs
hs-hackathon-drone/: Cargo.toml
hs-hackathon-drone/src/: lib.rs
hs-hackathon-macros/: Cargo.toml
hs-hackathon-macros/src/: lib.rs
hs-hackathon-vision/: Cargo.toml
hs-hackathon-vision/src/: lib.rs
hs-hackathon-vision/src/raw/: bounding_box.rs  colors.rs  led_detector.rs  mod.rs  preprocessor.rs  utils.rs
pi/: configuration.nix  teams.toml  wifi.toml
scripts/: aviate  drone  sync
src/: lib.rs
src/cheats/: angles.rs  approaching.rs  idling.rs  mod.rs  positioning.rs  turning.rs
src/cheats/internal/: mod.rs
