[workspace]
members = [
    ".",
    "hs-hackathon-macros",
    "hs-hackathon-car",
    "hs-hackathon-drone",
    "hs-hackathon-vision",
]

[workspace.package]
version = "0.1.1"
license = "Apache-2.0"
edition = "2021"
description = "An embedded + computer vision Rust Hackathon"
repository = "https://github.com/helsing-ai/rust-nation"

[workspace.dependencies]
hs-hackathon-car = { version = "0.1.1", path = "hs-hackathon-car" }
hs-hackathon-drone = { version = "0.1.1", path = "hs-hackathon-drone" }
hs-hackathon-vision = { version = "0.1.1", path = "hs-hackathon-vision" }
hs-hackathon-macros = { version = "0.1.1", path = "hs-hackathon-macros" }

clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6.12"
image = "0.24"
tokio = { version = "1.36", features = ["full", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[package]
name = "hs-hackathon"
readme = "README.md"
description.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
hs-hackathon-car.workspace = true
hs-hackathon-drone.workspace = true
hs-hackathon-vision.workspace = true
hs-hackathon-macros.workspace = true

clap.workspace = true
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
futures.workspace = true
image.workspace = true

[dev-dependencies]
