[package]
name = "hs-hackathon-macros"
description = "Macro support crate for Helsing's Rust Nation hackathon"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.36", default-features = false }
syn = { version = "2.0.39", default-features = false, features = ["parsing", "proc-macro"] }
quote = { version = "1.0.14", default-features = false }
lazy_static = "1.4.0"

[features]
default = []
