[package]
name = "hs-hackathon-vision"
description = "Computer vision support crate for Helsing's Rust Nation hackathon"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
hs-hackathon-drone.workspace = true
crossterm = "0.27.0"
eyre = "0.6.12"
image = "0.24"
imageproc = "0.23"
log = "0.4.20"
openh264 = "0.4"
palette = "0.7.5"
ratatui = "0.25.0"
rusttype = "0.9"
sscanf = "0.4"
strum = { version = "0.26", features = [ "derive" ] }
tokio.workspace = true
tracing.workspace = true
tracing-appender = "0.2"
tracing-core = "0.1"
tracing-subscriber.workspace = true
tui-logger = { version = "0.10.1", features = ["tracing-support", "crossterm"] }
unicode-width = "0.1.11"
